--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 ﻿# Basic
-title: 陈帝的博客|Dc's Blog
-name: Dc's Blog
+title: Dc's Blog
 subtitle: 岁月绵长，要对爱的事不遗余力
 welcome_message: 生活分享，技术交流，欢迎来访
 description: 
