--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,10 @@ blog_button:
     description: 博客访问
 
 
-
 # Navigation buttons in the front page.
 nav:
     - {title: 介绍, description: 自我介绍, url: '/intro'}
-    - {title: 兴趣, description: 兴趣爱好, url: '/interesting'}
+    - {title: 兴趣, description: 兴趣爱好, url: '/inter'}
     - {title: 生活, description: 生活环境, url: '/Life'}
 
 # Pagination
