--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ social:
     github: GhotsboyD
     twitter: 
     gplus: 107108267983477358170
-    mail: onev@onevcat.com
+    mail: ghotsboy@outlook.com
 
 # Google Analytics
 ga:
