--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url: "https://ghotsboyd.github.io/"
 highlighter: rouge
 
 # supported colors: blue, green, purple, red, orange or slate. If you need clear, leave it empty.
-cover_color: red
+cover_color: blue
 
 # The blog button should not be removed.
 blog_button:
